[package]
name = "fku-si"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.10"
url = "2.5"
futures = "0.3"
reqwest = "0.11"
dotenv = "0.15"
